[FIX] web: input error background in list_view
In commit[1] we introduced a new behavior on our fields having an
invalid state applying a slight danger background.

However in the list view table, the background of the inputs that are at
the same line were displaying the error state.
-> To reproduce, enter a wrong value in the list view, save and
click outside of focus.

This commit resets the `o-input-background-color` to it's initial value
inside the list view making it fallback to transparent, not displaying
the bg when line is in error state and avoiding overlapping with the
background already set on the td.

Since all the .o_input contained inside an `o_field_invalid` were having
the color property, the red color was displayed on the whole row
containing an error. It was misleading for the user to understand which
cell is currently in error state. This behavior was visible only on save
while getting the line containing the error cell out of focus. 
This commit changes the selector to apply the red color only on
`o_input` which is a direct child of an element containing the class 
`o_field_invalid`.

[1]: odoo/odoo@a010a22f3ae6dda8c45cb6a4c36bb38f949b33e9
task-3644895

closes odoo/odoo#146832

--- a/addons/web/static/src/views/fields/fields.scss
+++ b/addons/web/static/src/views/fields/fields.scss
@@ -62,7 +62,7 @@
 
 // Invalid
 .o_field_invalid:not(:focus-within) {
-    &.o_input, .o_input, &.o_form_label {
+    &.o_input, > .o_input, &.o_form_label {
         color: o-text-color('danger');
     }
 
